[package]
name = "rustlings"
version = "0.1.0"
authors = ["姜坤"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
indicatif = "0.16"
console = "0.15"
notify = "4.0.17"
toml = "0.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
once_cell = "1.15.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
glob = "0.3.0"
